feat(app-header): add title and icon

--- a/aula04-Angular/src/app/header/header.component.html
+++ b/aula04-Angular/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div class="row">
+  <div class="titulo-site d-flex align-items-center">
+    <span>{{this.titulosite}}</span>
+  </div>
+  <div class="titulo-site d-flex align-items-center col-sm justify-content-end">
+    <img class="menu-usuario" src="assets/person-circle-outline.svg">
+  </div>
+</div>
