--- a/aula04-Angular/src/app/header/header.component.css
+++ b/aula04-Angular/src/app/header/header.component.css
@@ -5,10 +5,20 @@
   border-bottom: 1px dashed #d0d0d0;
   padding: 32px;
 }
+
+.icone-usuario {
+  width: 50px;
+  height: 50px;
+}
+
 .menu-usuario {
   position: absolute;
   top: 70px;
   right: 32px;
-  width: 50px;
-  height: 50px;
+  width: fit-content !important;
+  z-index: 1;
+}
+
+.item-clicavel {
+  font-weight: bold;
 }
