feat(header): add toggleMenu function to icone-usuario click event and click outside for deactivation

--- a/aula04-Angular/src/app/header/header.component.html
+++ b/aula04-Angular/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <span>{{this.titulosite}}</span>
   </div>
   <div class="titulo-site d-flex align-items-center col-sm justify-content-end">
-    <a (click)="this.menuusuario = !this.menuusuario">
+    <a (click)="toggleMenu()">
       <img class="icone-usuario" src="assets/person-circle-outline.svg">
     </a>
   </div>
