feat(category-bar): update category-bar component HTML

--- a/aula04-Angular/src/app/category-bar/category-bar.component.html
+++ b/aula04-Angular/src/app/category-bar/category-bar.component.html
@@ -1,1 +1,5 @@
-<p>category-bar works!</p>
+<ul class="b-list-group b-listgroup-horizontal">
+  <li >An item</li>
+  <li >A second item</li>
+  <li >A third item</li>
+</ul>
