feat(category-bar): atualizar componente category-bar
Adicionar a lista de categorias dinamicamente ao componente category-bar.

--- a/aula04-Angular/src/app/category-bar/category-bar.component.html
+++ b/aula04-Angular/src/app/category-bar/category-bar.component.html
@@ -1,5 +1,10 @@
 <ul class="b-list-group b-listgroup-horizontal">
-  <li >An item</li>
-  <li >A second item</li>
-  <li >A third item</li>
+  <li *ngFor="let category of categories">
+    <div>
+      <img src="{{category.image}}" alt="user-image">
+    </div>
+    <div>
+      <span>{{category.title}}</span>
+    </div>
+  </li>
 </ul>
