--- a/aula04-Angular/src/app/nav-bar/nav-bar.component.html
+++ b/aula04-Angular/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="pos-f-t menu-expansivel">
+<div class="pos-f-t menu-expansivel z-3">
   <nav class="navbar navbar-light">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent"
       aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
