--- a/aula04-Angular/src/app/category-bar/category-bar.component.html
+++ b/aula04-Angular/src/app/category-bar/category-bar.component.html
@@ -1,6 +1,6 @@
-<ul class="b-list-group b-listgroup-horizontal">
-  <li *ngFor="let category of categories">
-    <div>
+<ul class="list-group list-group-horizontal category-bar">
+  <li *ngFor="let category of categories" class="list-group-item">
+    <div class="card_img">
       <img src="{{category.image}}" alt="user-image">
     </div>
     <div>
