Atualizar estilo do componente category-bar e adicionar classe card_info

--- a/aula04-Angular/src/app/category-bar/category-bar.component.html
+++ b/aula04-Angular/src/app/category-bar/category-bar.component.html
@@ -3,7 +3,7 @@
     <div class="card_img">
       <img src="{{category.image}}" alt="user-image">
     </div>
-    <div>
+    <div class="card_info text-center">
       <span>{{category.title}}</span>
     </div>
   </li>
