feat(courses): Adicionar listagem de cursos com imagens
Adiciona a listagem de cursos com imagens na página principal. A listagem é exibida em forma de cartões, contendo a imagem do curso e o título. Essa alteração melhora a experiência do usuário ao visualizar os cursos disponíveis.

Refs #123

--- a/aula04-Angular/src/app/courses/courses.component.html
+++ b/aula04-Angular/src/app/courses/courses.component.html
@@ -1,1 +1,10 @@
-<p>courses works!</p>
+<ul class="list-group list-group-horizontal category-bar">
+  <li *ngFor="let course of courses" class="card_item">
+    <div class="card_img">
+      <img src="{{course.image}}" alt="user-image">
+    </div>
+    <div class="card_info text-center">
+      <span>{{course.title}}</span>
+    </div>
+  </li>
+</ul>
